/** 
 * Base User class
 * Author: Aida Alimzhanova
 * Date: 2025-10-27
 */
package ecommerce.models;

public abstract class User {
    private String name;
    private String email;
    private String password;
    private String role; // "customer" or "employee"

    public User(String name, String email, String password, String role) {
        this.name = name;
        this.email = email;
        this.password = password;
        this.role = role;
    }

    public String getName() { return name; }
    public void setName(String name) { this.name = name; }

    public String getEmail() { return email; }
    public void setEmail(String email) { this.email = email; }

    public String getPassword() { return password; }
    public void setPassword(String password) { this.password = password; }

    public String getRole() { return role; }
    public void setRole(String role) { this.role = role; }

    public abstract void displayInfo();
}
